# ONGAProject

./: CMakeLists.txt  ONGAProject_ja_JP.ts  README.md  main.cpp
apps/ONGA_BlueDoctor/: ONGA_BlueDoctor.cpp  ONGA_BlueDoctor_mainwindow.cpp  ONGA_BlueDoctor_mainwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h
apps/ONGA_Depth/: ONGA_Depth.cpp  ONGA_Depth_mainwindow.cpp  ONGA_Depth_mainwindow.h  ONGA_Depth_mainwindow.ui  common.h  controlpanel.h  controlpanel.ui  histogramviewer.cpp  histogramviewer.h  histogramviewer.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/Samples/: Sample_D455.cpp
resources/: ONGA_Depth.qrc  config.ini
src/: common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.OUTqUu  mainwindow.ui
src/D400s/: d400s.cpp  d400s.h
src/R200/: difinition.h  r200.cpp  r200.h
src/ui/CameraParamControl/: cameraparamcontrol.cpp  cameraparamcontrol.h  cameraparamcontrol.ui
src/ui/CameraParams/: cameraparameter.cpp  cameraparameter.cpp~RF53d809f.TMP  cameraparameter.h  cameraparameter.h.hXhpQC  cameraparameter.ui
src/ui/Control/: control.cpp  control.h  control.ui
src/ui/ControlPanel/: controlpanel.cpp  controlpanel.h  controlpanel.ui
src/ui/HSVRangeControlPanel/: hsvrangecontrolpanel.cpp  hsvrangecontrolpanel.h  hsvrangecontrolpanel.ui
src/ui/ImageViewer/: imageviewer.cpp  imageviewer.h  imageviewer.ui
src/ui/ProcessingProgress/: processingprogress.cpp  processingprogress.h  processingprogress.ui
